# jibrel-com-backend

./: .direnvrc  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  run.sh  tox.ini  v1.swagger.yml
ccwt/: __init__.py  exceptions.py  helpers.py  settings.py  storages.py  urls.py
ccwt/admin/: __init__.py  base.py  filters.py  forms.py
ccwt/api/: helpers.py  serializers.py  views.py
ccwt/limitations/: data.py  utils.py
ccwt/migrations/: 0001_initial.py
ccwt/models/: __init__.py
ccwt/tests/: factories.py
django_banking/: __init__.py  apps.py  exceptions.py  helpers.py  settings.py  storages.py  user.py  utils.py
django_banking/admin/: __init__.py  base.py  filters.py  helpers.py
django_banking/api/: error.py  helpers.py  serializers.py  views.py
django_banking/core/: data.py  utils.py
django_banking/limitations/: data.py  enum.py  exceptions.py  utils.py
django_banking/migrations/: 0001_initial.py  0002_auto_20200113_1018.py  0003_auto_20200113_1135.py  0004_auto_20200120_1220.py  0005_auto_20200207_1209.py  0006_auto_20200304_1455.py
django_banking/models/: __init__.py
django_banking/signals/: __init__.py
jibrel/: celery.py  settings.py  urls.py  views.py  wsgi.py
jibrel/accounting/: exceptions.py  factories.py  models.py  serializers.py
jibrel/assets/: factories.py  models.py
jibrel/authentication/: __init__.py  apps.py  auth_urls.py  enum.py  factories.py  managers.py  models.py  queryset.py  serializers.py  services.py  tasks.py  token_generator.py  user_urls.py  views.py
jibrel/campaign/: enum.py  models.py
jibrel/campaigns/: enum.py  managers.py  models.py  queryset.py  serializers.py  urls.py  validators.py  views.py
jibrel/core/: errors.py  exceptions.py  limits.py  logging.py  permissions.py  rest_framework.py  serializers.py  storages.py  swagger.py  throttling.py  urls.py  utils.py  validators.py  xls.py
jibrel/exchanges/: models.py
jibrel/investment/: __init__.py  apps.py  docusign.py  enum.py  managers.py  (+7 more)
jibrel_admin/: celery.py  dashboards.py  pytest.ini  settings.py  urls.py  views.py  wsgi.py
tap_payments/: __init__.py
tests/: conftest.py  factories.py  fixtures.py  test_builder.py  test_error_handling.py  test_healthcheck.py  test_individual_kyc.py  test_individual_kyc_validate.py  test_last_kyc.py  test_notifications.py  test_onfido.py  test_organization_kyc.py  test_organization_kyc_validate.py  test_password_reset.py  test_permissions.py  test_services.py  test_user.py  test_views.py  test_wallet.py
(+398 files in other folders)
